# esp32-isotp-ble-bridge-c7vag

./: CMakeLists.txt  README.md  build_spiffs.py  partitions.csv  sdkconfig.defaults
.github/workflows/: build-firmware.yml
companion/: ble_bridge_client.py  build.sh  companion_gui.py  requirements.txt
docs/: HARDWARE.md  kwp2000-kline-variant.md
main/: CMakeLists.txt  Kconfig.projbuild  ble_server.c  ble_server.h  connection_handler.c  connection_handler.h  constants.h  eeprom.c  isotp.c  isotp_bridge.c  isotp_bridge.h  isotp_link_containers.c  isotp_link_containers.h  led.c  main.c  mcp2515.c  mcp2515.h  persist.c  persist.h  twai.c  twai.h  uart.c  wifi_server.c  wifi_server.h
